build(mobile hamburger nav)

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,10 @@ title: Management de projet, conduite du changement et numérique à Nantes
           </section>
         </main>
         <header id="homepage-menu">
-          <nav id="homepage-menu-flexer">
+          <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+            <span class="sr-only" >Menu</span>
+          </button>
+          <nav id="primary-navigation" data-visible="false">
             <ul>
               <li><a href="../curriculum">01 Curriculum Vitae</a></li>
               <li><a href="blog">02 Blog</a></li>
@@ -51,5 +54,6 @@ title: Management de projet, conduite du changement et numérique à Nantes
         </footer>
       </container>
     <script src="script.js"></script>
+    <script src="nav.js"></script>
   </body>
 </html>
