--- a/src/colophon.html
+++ b/src/colophon.html
@@ -26,7 +26,7 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
           <span class="navigation-announcer">NAVIGATION</span>
           <ul class="menu">
             <li>
-              <a href="../index.html">HOME</a>
+              <a href="../index">HOME</a>
               <!-- <a id="home" href="../index.html" aria-label="Home page"
                   ><i class="ph-bold ph-house-simple"></i
                 ></a> -->
