--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -26,7 +26,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           <span class="navigation-announcer">NAVIGATION</span>
           <ul class="menu">
             <li>
-              <a href="../index.html">HOME</a>
+              <a href="../index">HOME</a>
               <!-- <a id="home" href="../index.html" aria-label="Home page"
                 ><i class="ph-bold ph-house-simple"></i
               ></a> -->
