--- a/src/colophon.html
+++ b/src/colophon.html
@@ -76,5 +76,6 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
     <script src="../script.js"></script>
+    <script src="../nav.js"></script>
   </body>
 </html>
