--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -1,4 +1,50 @@
----
-title: Les projets de Téotime Pacreau
-layout: baseforprojets.html
----
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    {% include "head.html"%}
+  </head>
+  <body>
+    {% include "color-picker.html"%}
+    <div class="container projets-container" id="normal-page-container">
+      <header>
+        <button
+          class="mobile-nav-toggle"
+          aria-controls="primary-navigation"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Menu</span>
+        </button>
+        <nav
+          class="navigation-flexer"
+          id="primary-navigation"
+          data-visible="false"
+        >
+          <span class="navigation-announcer">NAVIGATION</span>
+          <ul class="menu">
+            <li>
+              <a href="../index">HOME</a>
+              <!-- <a id="home" href="../index.html" aria-label="Home page"
+                ><i class="ph-bold ph-house-simple"></i
+              ></a> -->
+            </li>
+            <li><a href="/curriculum">CV</a></li>
+            <li><a href="/blog">BLOG</a></li>
+            <li><a href="/projets">PROJETS</a></li>
+            <li><a href="../colophon">COLOPHON</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main id="projets">
+        <div id="project-card">
+          <div id="project-img-wrapper">
+            <img src="../img/newsletter.png" alt="">
+          </div>
+          <h2 id="project-card-title"><a href="projetnewsletter">Construction du frontend et du backend d'un site de newsletter</a></h2>
+        </div>
+      </main>
+      <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
+    </div>
+    <script src="../script.js"></script>
+    <script src="../nav.js"></script>
+  </body>
+</html>
