--- a/src/colophon.html
+++ b/src/colophon.html
@@ -38,7 +38,8 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
           </ul>
         </nav>
       </header>
-      <main class="colophon">
+      <main id="colophon">
+        <h1>Colophon</h1>
         <p>
           Ce site léger et sans
           <a
