--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -35,11 +35,22 @@
         </nav>
       </header>
       <main id="projets">
-        <div id="project-card">
-          <div id="project-img-wrapper">
-            <img src="../img/newsletter.png" alt="">
+        <h1>Projets</h1>
+        <div id="project-card-container">
+          <div id="project-card">
+            <div id="project-img-wrapper">
+              <img
+                src="../img/newsletter.png"
+                alt="capture of the hompage of a newsletter subscription website"
+              />
+            </div>
+            <h2 id="project-card-title">
+              <a href="projetnewsletter"
+                >Construction du frontend et du backend d'un site de
+                newsletter</a
+              >
+            </h2>
           </div>
-          <h2 id="project-card-title"><a href="projetnewsletter">Construction du frontend et du backend d'un site de newsletter</a></h2>
         </div>
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
