fix(style.css) : hide list in footer and display work exp in CV

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -58,9 +58,12 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           </p>
           <ul class="travail-prose">
             <li>
-              Co-pilotage stratégique et opérationnel de projets de
-              transformation publique.
+              Conduite de projets stratégique de transformation publique.
             </li>
+            <li>
+              Appui à la coordination des projets portés par le laboratoire Etat'Lin : avec une équipe de 5 designer de services, appropriation de la méthode du design de services, design thinking, production d'outils sur mesure...
+            </li>
+            <li>Gestion de projet informatique : conduite d'une projet de dématérialisation des enquêtes publiques en mode agile. En lead sur l'AMOA (préparation au développement), développement et hébergement cloud, coordination de l'équipe projet, plan de conduite du changement pour accompagner les utilisateurs.</li>
             <li>
               Co-animation de
               <a
@@ -68,10 +71,6 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
                 >l’incubateur de projets innovants d’Etat’LIN</a
               >, destiné à promouvoir l’intrapreneuriat au sein de la fonction
               publique.
-            </li>
-            <li>
-              Appui et collaboration avec une équipe de 4 designer de services :
-              acculturation au design thinking et aux outils
             </li>
             <li>
               Co-animation du réseau des
@@ -85,15 +84,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
               Appui aux services de l’État en Pays de la Loire dans leurs
               projets de conduite du changement
             </li>
-            <li>
-              Accompagnement et suivi de projets menés avec des prestataires
-              externes, notamment déclinaison des projets
-              <a
-                href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/CAP-2030/#titre"
-                >CAP 2030</a
-              >
-              dans les départements et directions régionales.
-            </li>
+            <li>Conception et facilitation de séminaires pour répondre aux besoins de transformation organisationnels</li>
             <li>
               Développement de la transversalité entre les 3 axes de
               transformation d’Etat’LIN : transformation numérique,
@@ -387,7 +378,8 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
-    <script src="../script.js"></script>
-    <script src="../nav.js"></script>
+    <script src="/scripts/colorTheme.js"></script>
+    <script src="/scripts/nav.js"></script>
+    <script src="/scripts/displayWorkExp.js"></script>
   </body>
 </html>
