--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
           {% include "footer.html"%}
         </footer>
       </div>
-    <script src="script.js"></script>
-    <script src="nav.js"></script>
+    <script src="/scripts/colorTheme.js"></script>
+    <script src="/scripts/nav.js"></script>
   </body>
 </html>
