--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@ title: Management de projet, conduite du changement et numérique à Nantes
       {% include "color-picker.html"%}
       <div class="container" id="homepage-container">
         <main id="homepage-hero">
-          <h1>
+          <h1 class="anim-1 intersect intersect-hidden">
             Téotime Pacreau,<br />
             Manage<wbr />ment de projet & Numérique
           </h1>
           <section id="homepage-prose">
-            <p>
+            <p class="anim-2 intersect intersect-hidden">
               Je suis apprenti en gestion de projet, transversalité et conduite
               du changement pour
               <a
@@ -28,7 +28,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
               >. Dans ce cadre j'étudie au sein du Master de Management,
               Organisation et Conduite du Changement à Nantes.
             </p>
-            <p>
+            <p class="intersect intersect-hidden anim-3">
               Impliqué professionnellement par les enjeux de transformation des
               organisations.<br />
               J'entame également un apprentissage personnel du développement
@@ -40,7 +40,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
           <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
             <span class="sr-only">Menu</span>
           </button>
-          <nav class="homepage-nav" id="primary-navigation" data-visible="false">
+          <nav class="homepage-nav intersect intersect-hidden anim-5" id="primary-navigation" data-visible="false">
             <ul>
               <li><a href="../curriculum">01 Curriculum Vitae</a></li>
               <li><a href="blog">02 Blog</a></li>
@@ -49,11 +49,12 @@ title: Management de projet, conduite du changement et numérique à Nantes
             </ul>
           </nav>
         </header>
-        <footer id="footer" role="contentinfo">
+        <footer class="intersect intersect-hidden anim-4" id="footer" role="contentinfo">
           {% include "footer.html"%}
         </footer>
       </div>
     <script src="/scripts/colorTheme.js"></script>
     <script src="/scripts/nav.js"></script>
+    <script src="/scripts/animationHomepage.js"></script>
   </body>
 </html>
