--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@ title: Management de projet, conduite du changement et numérique à Nantes
       {% include "color-picker.html"%}
       <div class="container" id="homepage-container">
         <main id="homepage-hero">
-          <h1 class="anim-1 intersect intersect-hidden">
+          <h1 class="anim-1 intersect">
             Téotime Pacreau,<br />
             Manage<wbr />ment de projet & Numérique
           </h1>
           <section id="homepage-prose">
-            <p class="anim-2 intersect intersect-hidden">
+            <p class="anim-2 intersect">
               Je suis apprenti en gestion de projet, transversalité et conduite
               du changement pour
               <a
@@ -28,7 +28,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
               >. Dans ce cadre j'étudie au sein du Master de Management,
               Organisation et Conduite du Changement à Nantes.
             </p>
-            <p class="intersect intersect-hidden anim-3">
+            <p class="intersect anim-3">
               Impliqué professionnellement par les enjeux de transformation des
               organisations.<br />
               J'entame également un apprentissage personnel du développement
@@ -41,7 +41,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
             <span class="sr-only">Menu</span>
           </button>
           <nav class="homepage-nav" id="primary-navigation" data-visible="false">
-            <ul class="intersect intersect-hidden anim-5" id="dont-animate">
+            <ul class="intersect anim-5" id="dont-animate">
               <li><a href="../curriculum">01 Curriculum Vitae</a></li>
               <li><a href="blog">02 Blog</a></li>
               <li><a href="/projets">03 Projets</a></li>
@@ -49,7 +49,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
             </ul>
           </nav>
         </header>
-        <footer class="intersect intersect-hidden anim-4" id="footer" role="contentinfo">
+        <footer class="anim-4 intersect" id="footer" role="contentinfo">
           {% include "footer.html"%}
         </footer>
       </div>
