fix(twitter card)

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@ title: Management de projet, conduite du changement et numérique à Nantes
       </div>
     <script defer src="/scripts/colorTheme.js"></script>
     <script src="/scripts/nav.js"></script>
-    <script src="/scripts/animationHomepage.js"></script>
+    <script defer src="/scripts/animationHomepage.js"></script>
   </body>
 </html>
