add(links on curriculum)

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -281,9 +281,13 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
             <li>CSS</li>
             <li>Javascript</li>
             <li>NodeJS</li>
-            <li>Express</li>
-            <li>Github</li>
-            <li>Eleventy</li>
+            <li><a href="https://expressjs.com/fr/" target="_blank"
+              rel="noopener noreferrer">Express</a></li>
+            <li><a href="https://fastify.dev/" target="_blank"
+              rel="noopener noreferrer">Fastify</a></li>
+            <li>Git & Github</li>
+            <li><a href="https://www.11ty.dev/" target="_blank"
+              rel="noopener noreferrer">Eleventy</a></li>
           </ul>
         </section>
         <section class="certifications-titre">
