--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -270,11 +270,10 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           <ul class="competences-details">
             <li>Management de projet</li>
             <li>Conduite du changement</li>
-            <li>Diagnostic et transformation des organisations</li>
+            <li>Diagnostic et conseil en transformation des organisations</li>
+            <li>Coordination en rôle de Product Owner côté client (AMOA, MOE)</li>
             <li>Accompagnement à l'entrepreneuriat</li>
             <li>Animation de réseau</li>
-            <li>Appui à la transversalité</li>
-            <li>Veille stratégique</li>
           </ul>
           <ul class="competences-details">
             <li>HTML</li>
