style & build(projet bookshelf)

--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -4,8 +4,10 @@ layout: projetlayout.html
 ---
 <h2>Construction du frontend et du backend d'un site de newsletter</h2>
 <div id="project-img-wrapper">
-    <a href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt=""></a>
+    <a href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt="capture of the hompage of the newsletter subscription website"></a>
 </div>
+<h3>Détails du projet</h3>
+<p>Site d'inscription à une newsletter dédiée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
 <h3>Stack</h3>
 <ul>
     <li>SQLite database et SQL queries</li>
