--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -40,16 +40,30 @@
           <div id="project-card">
             <div id="project-img-wrapper">
               <img
-                src="../img/newsletter.png"
-                alt="capture of the hompage of a newsletter subscription website"
+                src="../img/bookshelf.png"
+                alt="capture of the hompage of the bookshelf organizer website"
               />
             </div>
-            <h2 id="project-card-title">
-              <a href="projetnewsletter"
-                >Construction du frontend et du backend d'un site de
-                newsletter</a
-              >
-            </h2>
+            <div class="project-descripter">
+              <h2 id="project-card-title">
+                <a href="projetbookshelf">"The Bookshelf", une bibliothèque de réservation de livres</a>
+              </h2>
+              <p>Construction du backend et du frontend.</p>
+          </div>
+          </div>
+          <div id="project-card">
+            <div id="project-img-wrapper">
+              <img
+                src="../img/newsletter.png"
+                alt="capture of the hompage of the newsletter subscription website"
+              />
+            </div>
+            <div class="project-descripter">
+              <h2 id="project-card-title">
+                <a href="projetnewsletter">"Feuillu", une newsletter explorant le web-design</a>
+              </h2>
+              <p>Construction du frontend et du backend d'un site d'inscription et d'envoi de newsletter.</p>
+            </div>
           </div>
         </div>
       </main>
