--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -16,9 +16,11 @@ layout: projetlayout.html
 <h3>Fonctionnalités</h3>
 <ol id="projet-ol">
     <li><strong>Base de données :</strong> à la base il s'agit d'un export CSV de ma base de livres Goodreads. J'ai transformé ce fichie CSV en BDD SQLite grâce aux fonctionnalités bash de SQLite.</li>
-    <li><strong>Retrouver l'image de couverture de chaque livre :</strong> L'export CSV de Goodreads ne fournit pas les images de couverture des livres. J'ai donc utilisé une libraire de "data scrapping" qui récupère l'image de couverture de chaque livre sur Amazon via l'ISBN.</li>
-    <li><strong>UI :</strong> conception du style "bento". Intégration d'une vidéo montrant le contenu de la newsletter sur la page d'accueil. Possible d'afficher les derniers sujets de la newsletter dans "Issues".</li>
-    <li><strong>Composition dynamique de la newsletter :</strong> une requête SQL est effectuée dans la BDD pour personnaliser le prénom et le nom du destinataire.</li>
+    <li><strong>Retrouver l'image de couverture de chaque livre :</strong> L'export CSV de Goodreads ne fournit pas les images de couverture des livres. J'ai donc utilisé une libraire de "data scrapping" qui récupère l'image de couverture de chaque livre sur Amazon via l'ISBN. [voir getBookCovers.js](https://github.com/teotimepacreau/bookshelf/blob/v2/backend/controllers/getBookCovers.js)</li>
+    <li><strong>Requêtage de la BDD et transfert des données au frontend :</strong> requête SQL pour croiser les données de tous les livres avec leurs images de couvertures correspondantes. Envoi des données au frontend. [voir passBookDataToFront.js](https://github.com/teotimepacreau/bookshelf/blob/v2/backend/controllers/passBookDataToFront.js)</li>
+    <li><strong>Composition dynamique des "containers" de livres au moyen de "HTML template" : </strong> [voir displayBooks.js](https://github.com/teotimepacreau/bookshelf/blob/v2/frontend/utils/displayBooks.js)</li>
+
+    
     <li><strong>Envoi régulier de la newsletter :</strong> un Node Cronjob automatise l'envoi par mail chaque mois.</li>
     <li><strong>Permettre au client d'afficher la newsletter dans son navigateur :</strong> une route Express prend en paramètre la requête pour savoir quel mail elle doit afficher.</li>
     <li><strong>Déploiement :</strong> afin de déployer la BDD SQLite j'ai choisi <a href="https://fly.io/">fly.io</a>, la BDD locale SQLite est répliquée sur le serveur dans les Volumes.</li>
