--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -4,7 +4,7 @@ layout: projetlayout.html
 ---
 <h2>Construction du frontend et du backend d'un site de newsletter</h2>
 <div id="project-img-wrapper">
-    <a href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt="capture of the hompage of the newsletter subscription website"></a>
+    <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt="capture of the hompage of the newsletter subscription website"></a>
 </div>
 <h3>Détails du projet</h3>
 <p>Site d'inscription à une newsletter dédiée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
@@ -21,17 +21,17 @@ layout: projetlayout.html
 <ol id="projet-ol">
     <li><strong>Logique de souscription :</strong> les utilisateurs s'inscrivent sur la page d'accueil en remplissant le formulaire. lastName, firstName, et email sont ajoutés à la BDD SQL. Une notification visuelle confirme la souscription à l'utilisateur, si l'email est déjà présent dans la BDD une notification visuelle informe de l'erreur. Un email de bienvenue est envoyé au nouvel inscrit.</li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/newsletter-subscribe.mp4"></video>
+        <video controls muted src="../../img/newsletter-subscribe.mp4" aria-label="subscription function"></video>
     </div>
     <li><strong>Logique de désinscription :</strong> les utilisateurs peuvent se désinscrire sur la page /unsubscribe. L'utilisateur entre son mail dans le formulaire de désinscription, la BDD se met à jour en conséquence. Une vérification s'opère avec une requête SQL pour vérifier si le mail est dans la BDD, si ce n'est pas le cas une notification visuelle informe l'utilisateur.</li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/newsletter-unsubscribe.mp4"></video>
+        <video controls muted src="../../img/newsletter-unsubscribe.mp4" aria-label="unsubscription function"></video>
     </div>
     <li><strong>UI :</strong> conception du style "bento". Intégration d'une vidéo montrant le contenu de la newsletter sur la page d'accueil. Possible d'afficher les derniers sujets de la newsletter dans "Issues".</li>
     <li><strong>Composition dynamique de la newsletter :</strong> une requête SQL est effectuée dans la BDD pour personnaliser le prénom et le nom du destinataire.</li>
     <li><strong>Envoi régulier de la newsletter :</strong> un Node Cronjob automatise l'envoi par mail chaque mois.</li>
     <li><strong>Permettre au client d'afficher la newsletter dans son navigateur :</strong> une route Express prend en paramètre la requête pour savoir quel mail elle doit afficher.</li>
-    <li><strong>Déploiement :</strong> afin de déployer la BDD SQLite j'ai choisi <a href="https://fly.io/">fly.io</a>, la BDD locale SQLite est répliquée sur le serveur dans les Volumes.</li>
+    <li><strong>Déploiement :</strong> afin de déployer la BDD SQLite j'ai choisi <a target="_blank" href="https://fly.io/">fly.io</a>, la BDD locale SQLite est répliquée sur le serveur dans les Volumes.</li>
 </ol>
 <h3>Ce que j'ai appris</h3>
 <ul>
@@ -43,6 +43,6 @@ layout: projetlayout.html
 </ul>
 <h3>Lien du projet et code source</h3>
 <ul>
-    <li><strong>Projet en ligne : </strong><a href="https://feuillu-newsletter.teotimepacreau.fr">Site d'inscription à la newsletter</a></li>
-    <li><strong>Code source du projet : </strong><a href="https://github.com/teotimepacreau/Express-Newsletter">Lien Github</a></li>
+    <li><strong>Projet en ligne : </strong><a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr">Site d'inscription à la newsletter</a></li>
+    <li><strong>Code source du projet : </strong><a target="_blank" href="https://github.com/teotimepacreau/Express-Newsletter">Lien Github</a></li>
 </ul>
