contenu(projet-newsletter)

--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -7,10 +7,13 @@ layout: projetlayout.html
     <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt="capture of the hompage of the newsletter subscription website"></a>
 </div>
 <h3>Détails du projet</h3>
-<p>Site d'inscription à une newsletter dédiée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
+<p>Site d'inscription à une newsletter consacrée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
+<div id="project-img-wrapper">
+    <video controls muted src="../../img/newsletter-full.mp4" aria-label="showcase of the functionalities of the newsletter website"></video>
+</div>
 <h3>Stack</h3>
 <ul>
-    <li>SQLite database et SQL queries</li>
+    <li>Base de données SQLite et requêtes SQL</li>
     <li>Express</li>
     <li>NodeJS</li>
     <li>HTML</li>
@@ -39,10 +42,11 @@ layout: projetlayout.html
     <li>Express : gestion des requêtes HTTP, concept de routes, controllers, configuration de serveur</li>
     <li>Requêtes et réponses HTTP, status code</li>
     <li>HTML emails (les différentes règles de compatibilité CSS des clients mails)</li>
-    <li>FLy.io : comment répliquer une BDD SQLite sur un serveur, déployer un front et un back sur un serveur en ligne</li>
+    <li>Organiser une architecture backend avec le frontend directement intégré</li>
+    <li>Hébergement: comment héberger et faire persister BDD SQLite grâce à Fly.io, déployer un front-in-back sur un serveur en ligne</li>
 </ul>
 <h3>Lien du projet et code source</h3>
 <ul>
-    <li><strong>Projet en ligne : </strong><a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr">Site d'inscription à la newsletter</a></li>
+    <li><strong>Projet en ligne : </strong><a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr">"Feuillu-newsletter"</a></li>
     <li><strong>Code source du projet : </strong><a target="_blank" href="https://github.com/teotimepacreau/Express-Newsletter">Lien Github</a></li>
 </ul>
