fix(@supports relative colors syntax for Firefox)

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -271,7 +271,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
             <li>Management de projet</li>
             <li>Conduite du changement</li>
             <li>Diagnostic et conseil en transformation des organisations</li>
-            <li>Coordination en rôle de Product Owner côté client (AMOA, MOE)</li>
+            <li>Conduite de projet numérique dans un rôle de Product Owner côté client (AMOA, MOE)</li>
             <li>Accompagnement à l'entrepreneuriat</li>
             <li>Animation de réseau</li>
           </ul>
@@ -287,6 +287,8 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
             <li>Git & Github</li>
             <li><a href="https://www.11ty.dev/" target="_blank"
               rel="noopener noreferrer">Eleventy</a></li>
+              <li>Vite</li>
+              <li>Svelte</li>
           </ul>
         </section>
         <section class="certifications-titre">
