--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
             <p class="anim-2 intersect">
               Je suis apprenti en gestion de projet, transversalité et conduite
               du changement pour
-              <a
+              <a tabindex="-1"
                 href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/Etat-LIN-qu-est-ce-que-c-est"
                 target="_blank"
                 rel="noopener noreferrer"
