--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -37,34 +37,34 @@
       <main id="projets">
         <h1>Mes projets</h1>
         <div id="project-card-container">
-          <div id="project-card">
-            <div id="project-img-wrapper">
+          <article id="project-card">
+            <header id="project-img-wrapper">
               <img
                 src="../img/bookshelf.png"
                 alt="capture of the hompage of the bookshelf organizer website"
               />
-            </div>
-            <div class="project-descripter">
+            </header>
+            <main class="project-descripter">
               <h2 id="project-card-title">
                 <a href="projetbookshelf">"The Bookshelf", une bibliothèque de réservation de livres</a>
               </h2>
               <p>Construction du backend et du frontend.</p>
-          </div>
-          </div>
-          <div id="project-card">
-            <div id="project-img-wrapper">
+          </main>
+          </article>
+          <article id="project-card">
+            <header id="project-img-wrapper">
               <img
                 src="../img/newsletter.png"
                 alt="capture of the hompage of the newsletter subscription website"
               />
-            </div>
-            <div class="project-descripter">
+            </header>
+            <main class="project-descripter">
               <h2 id="project-card-title">
                 <a href="projetnewsletter">"Feuillu", une newsletter explorant le web-design</a>
               </h2>
               <p>Construction du frontend et du backend d'un site d'inscription et d'envoi de newsletter.</p>
-            </div>
-          </div>
+            </main>
+          </article>
         </div>
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
