added downloadble CV

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -39,6 +39,9 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
         </nav>
       </header>
       <main class="container-cv">
+        <button id="download-cv">
+          <a href="/assets/CV_data.pdf" download><i class="ph ph-download">Télécharger mon CV</i></a>
+        </button>
         <section class="contenu-pro-titre">
           <h1>Expériences professionnelles</h1>
         </section>
